# tekoaly-harjoitustyo

./: .gitignore  Määrittelydokumentti.md  README.md
dokumentaatio/: Definition.md  Implementation.md  Lähteet.md  OwnModel.md  Preprosessing.md  Sources.md  Testing.md  UserGuide.md
src/: .coveragerc  best_model.pkl  preprocess_data.py  pyproject.toml  tasks.py
src/omamalli/: neural_network.py  omamalli.ipynb  pyproject.toml  training.py
src/omamalli/layers/: BaseLayer.py  Conv2d.py  Dense.py  Dropout.py  Flatten.py  MaxPooling.py  MaxPooling2D.py  ReLU.py  Softmax.py  __init__.py
src/omamalli/tests/: TestLayer.py  test_Conv2d.py  test_Dense.py  test_Dropout.py  test_Flatten.py  test_MaxPooling2D.py  test_NeuralNetwork.py  test_ReLU.py  test_Softmax.py  test_loss_calculation.py
src/own_model/: neural_network.py  own_model.ipynb  training.py
src/own_model/layers/: BaseLayer.py  BatchNormalization.py  Conv2d.py  Dense.py  Dropout.py  Flatten.py  MaxPooling2D.py  Softmax.py  __init__.py
src/own_model/tests/: test_Conv2d.py  test_Dense.py  test_Dropout.py  test_Flatten.py  test_MaxPooling2D.py  test_NeuralNetwork.py  test_ReLU.py  test_Softmax.py  test_loss_calculation.py
src/peer_model/: peer_model.ipynb
src/peer_model/.ipynb_checkpoints/: malli-checkpoint.ipynb
src/vertaismalli/: malli.ipynb  pyproject.toml  vertaismalli.ipynb
src/vertaismalli/kappaleet/: labels.json
src/web-app/: app.py
src/web-app/services/: prediction_service.py
src/web-app/templates/: index.html
viikkoraportit/: Viikkoraportti-1.md  Viikkoraportti-2.md  Viikkoraportti-3.md  (+3 more)
