[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Niilo Kurki <niilo.kurki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
librosa = "^0.10.1"
scikit-learn = "^1.4.1.post1"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
