[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Niilo Kurki <niilo.kurki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.12"
numpy = "^1.26.4"
librosa = "^0.10.1"
scikit-learn = "^1.4.1.post1"
setuptools = "^69.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
autoreload = "^0.1.2"
coverage = "^7.5.0"
poetry-pyinvoke-plugin = "^0.5.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow-intel = "^2.16.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
