[tool.poetry]
name = "vertaismalli"
version = "0.1.0"
description = ""
authors = ["Niilo Kurki <niilo.kurki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
librosa = "^0.10.1"
tensorflow = "^2.16.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"